--- a/index.html
+++ b/index.html
@@ -379,13 +379,14 @@
             currentScene = nextScene;
             updateScene();
 
-            if(nextScene == 3 || nextScene == 4 || nextScene == 6 || nextScene == 12){
+            if(nextScene == 3 || nextScene == 6 || nextScene == 12){
                 playAudio();
             }
 
             if (nextScene == 4) {
                 for (let i = 0; i <= 10; i++) {
                     showVirus();
+                    playAudio();
                 }
             }
         }
